syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.fanp";
option java_outer_classname = "s7proto";
option objc_class_prefix = "HLW";


message SnapSevenConfigResponse {
    bool Success = 1;
    int32 errorCode = 2;
    string errorDesc = 3;
}


//----------------------------------------------------------------------------------

message ConfigSnapSeven{
    message PLCConfig{
        string plcName = 1;
        string plcID = 2;
        string plcAddress = 3;
        int32 plcPort = 4;
        string plcIp = 5;
        message IoTag{
            string tagName = 1;
            string tagId = 2;
            string tagType= 3;
            string ioType= 4;
            int32 wordCount = 5;
            int32 bitCount = 6;
            int32 byteCount= 7;
        }
        message DataBlockTag{
            string tagName=1;
            string tagId=2;
            string functionCode=3;
            int32 count=4;
        }
        message MemoryTag{
            string tagName=1;
            string tagId=2;
            string functionCode=3;
            string startAddress=4;
            string varSize=5;
        }
        repeated  IoTag iotag =6;
        repeated  DataBlockTag datablocktag =7;
        repeated  DataBlockTag memoryTag =8;
    }
    repeated  PLCConfig pLCConfig =1;
}
    
service SystemSnapSevenConfig {
    rpc SendSystemSnapSevenConfig (ConfigSnapSeven) returns (SnapSevenConfigResponse);
}